# apple-books-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: docker.yml  publish.yml
apple_books_mcp/: __init__.py  __main__.py  server.py  utils.py
tests/: test_server.py
